<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".onboarding.WelcomeFragment">

    <ImageView
        android:id="@+id/image_view_welcome_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_vertical_margin"
        android:src="@drawable/ic_welcome_logo"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/Healthy.Text.Onboarding.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/def_horizontal_margin"
        android:layout_marginTop="@dimen/def_vertical_margin"
        android:text="@string/welcome_title" />

    <TextView
        style="@style/Healthy.Text.Onboarding.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/def_horizontal_margin"
        android:layout_marginTop="@dimen/def_vertical_margin"
        android:text="@string/welcome_description" />

    <com.google.android.material.button.MaterialButton
        style="@style/Healthy.Widget.Button.Primary.Forward"
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/def_horizontal_margin"
        android:layout_marginVertical="@dimen/def_vertical_margin"
        android:text="@string/button_start_text" />


</LinearLayout>